# python-crypto-bot

./: .env.example  .gitignore  README.md  RUNBOOK.md  command  pyproject.toml
src/crypto_bot/: __init__.py  __main__.py  cli.py  exchange_snapshot.py  logging_setup.py  universe.py
src/crypto_bot/backtest/: __init__.py  engine.py  runner.py  walk_forward.py
src/crypto_bot/config/: __init__.py  settings.py
src/crypto_bot/dashboard/: __init__.py  __main__.py  app.py  serialize.py  snapshot.py
src/crypto_bot/data/: __init__.py  balances.py  binance_client.py  cache.py  spot_public.py
src/crypto_bot/execution/: __init__.py  binance_errors.py  order_router.py
src/crypto_bot/features/: __init__.py  indicators.py
src/crypto_bot/journal/: __init__.py  store.py
src/crypto_bot/live/: __init__.py  runner.py
src/crypto_bot/ml/: __init__.py  filter.py  train.py
src/crypto_bot/monitoring/: __init__.py  events.py
src/crypto_bot/paper/: __init__.py  sim_broker.py
src/crypto_bot/risk/: __init__.py  governor.py  policy.py  position_sizing.py
src/crypto_bot/strategies/: __init__.py  base.py  ma_rsi.py  trend_pullback.py
src/crypto_bot/telegram_bot/: __init__.py  __main__.py  auth.py  bot.py  formatting.py  (+3 more)
tests/: test_backtest_synthetic.py  test_balances_parse.py  test_dashboard.py  test_exchange_failure.py  test_exchange_snapshot.py  test_execution.py  test_journal_reads.py  test_ma_rsi_strategy.py  test_ml_filter.py  test_risk_policy.py  test_telegram_auth.py  test_telegram_formatting.py  test_telegram_keyboards.py  test_telegram_views.py  test_universe.py
(+1 files in other folders)
