[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-bot"
version = "0.1.0"
description = "Binance Spot trading agent: backtest-first, risk-governed execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "httpx>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "ccxt>=4.2",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
